Revert "Fixed issue #23 and #24, button text no longer wrapping on questionnaire review page, splash page no longer wants to scroll horizontally"
This reverts commit 303c21ad6867535d3b22359b63f891ecfc037339.

--- a/career-guide/client/css/index.css
+++ b/career-guide/client/css/index.css
@@ -51,6 +51,7 @@
 }
 
 .splash {
+  width: 95%;
   max-width: 30em;
   background-color: var(--main-bg-color);
   box-shadow: 0 0 0.25rem 0.01rem var(--davys-gray);
@@ -378,7 +379,6 @@ button {
   justify-content: space-around;
   margin: 0.5em auto auto;
   width: inherit;
-  white-space: nowrap;
 }
 
 .question-answer > * {
